--- a/public/ajax/loadMoreBlog.html
+++ b/public/ajax/loadMoreBlog.html
@@ -5,7 +5,7 @@
         <!-- Item Image -->
         <div class="item-top">
             <!-- Post Link -->
-            <a href="blog_single.html" class="ex-link item_image">
+            <a href="{{ url('blog-post', [1]) }}" class="ex-link item_image">
                 <!-- Image Src -->
                 <img src="../images/portfolio/masonry/11.jpg" alt="Crexis">
             </a>
@@ -23,7 +23,7 @@
         <!-- Details -->
         <div class="details">
             <!-- Item Name -->
-            <a href="blog_single.html" class="ex-link">
+            <a href="{{ url('blog-post', [1]) }}" class="ex-link">
                 <h2 class="head">
                     Cute Friend!
                 </h2>
@@ -56,7 +56,7 @@
         <!-- Item Image -->
         <div class="item-top">
             <!-- Post Link -->
-            <a href="blog_single.html" class="ex-link item_image">
+            <a href="{{ url('blog-post', [1]) }}" class="ex-link item_image">
                 <!-- Image Src -->
                 <img src="../images/portfolio/masonry/12.jpg" alt="Crexis">
             </a>
@@ -74,7 +74,7 @@
         <!-- Details -->
         <div class="details">
             <!-- Item Name -->
-            <a href="blog_single.html" class="ex-link">
+            <a href="{{ url('blog-post', [1]) }}" class="ex-link">
                 <h2 class="head">
                     Stunning Tree.
                 </h2>
@@ -107,7 +107,7 @@
         <!-- Details -->
         <div class="details">
             <!-- Item Name -->
-            <a href="blog_single.html" class="ex-link">
+            <a href="{{ url('blog-post', [1]) }}" class="ex-link">
                 <h2 class="head">
                     Post With Text.
                 </h2>
@@ -140,7 +140,7 @@
         <!-- Item Image -->
         <div class="item-top">
             <!-- Post Link -->
-            <a href="blog_single.html" class="ex-link item_image">
+            <a href="{{ url('blog-post', [1]) }}" class="ex-link item_image">
                 <!-- Image Src -->
                 <img src="../images/portfolio/masonry/13.jpg" alt="Crexis">
             </a>
@@ -179,7 +179,7 @@
         <!-- Item Image -->
         <div class="item-top">
             <!-- Post Link -->
-            <a href="blog_single.html" class="ex-link item_image">
+            <a href="{{ url('blog-post', [1]) }}" class="ex-link item_image">
                 <!-- Image Src -->
                 <img src="../images/portfolio/masonry/06.jpg" alt="Crexis">
             </a>
@@ -197,7 +197,7 @@
         <!-- Details -->
         <div class="details">
             <!-- Item Name -->
-            <a href="blog_single.html" class="ex-link">
+            <a href="{{ url('blog-post', [1]) }}" class="ex-link">
                 <h2 class="head">Vintage Photography.
                 </h2>
             </a>
@@ -229,7 +229,7 @@
         <!-- Item Image -->
         <div class="item-top">
             <!-- Post Link -->
-            <a href="blog_single.html" class="ex-link item_image">
+            <a href="{{ url('blog-post', [1]) }}" class="ex-link item_image">
                 <!-- Image Src -->
                 <img src="../images/portfolio/masonry/07.jpg" alt="Crexis">
             </a>
@@ -247,7 +247,7 @@
         <!-- Details -->
         <div class="details">
             <!-- Item Name -->
-            <a href="blog_single.html" class="ex-link">
+            <a href="{{ url('blog-post', [1]) }}" class="ex-link">
                 <h2 class="head">
                     Happy Mood!
                 </h2>
@@ -280,7 +280,7 @@
         <!-- Item Image -->
         <div class="item-top">
             <!-- Post Link -->
-            <a href="blog_single.html" class="ex-link item_image">
+            <a href="{{ url('blog-post', [1]) }}" class="ex-link item_image">
                 <!-- Image Src -->
                 <img src="../images/portfolio/masonry/09.jpg" alt="Crexis">
             </a>
@@ -298,7 +298,7 @@
         <!-- Details -->
         <div class="details">
             <!-- Item Name -->
-            <a href="blog_single.html" class="ex-link">
+            <a href="{{ url('blog-post', [1]) }}" class="ex-link">
                 <h2 class="head">
                     Cute Mood!
                 </h2>
@@ -326,44 +326,5 @@
     </div>
     <!-- End Item -->
 
-    <!-- Item -->
-    <div class="cbp-item item graphic">
-        <!-- Item Image -->
-        <div class="item-top">
-            <!-- Post Link -->
-            <iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/180662636&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-        </div>
-        <!-- End Item Image -->
-
-        <!-- Details -->
-        <div class="details">
-            <!-- Item Name -->
-            <a href="blog_single.html" class="ex-link">
-                <h2 class="head">
-                    Great Music!
-                </h2>
-            </a>
-            <!-- Description -->
-            <p class="note mt-13 thin italic">
-                09 April, 2015
-            </p>
-            <!-- Description -->
-            <p class="description">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            </p>
-        </div>
-        <!-- End Center Details Div -->
-
-        <!-- Posted By -->
-        <a href="#" class="posted_button">
-            <!-- Image SRC -->
-            <img src="../images/user_03.jpg" alt="user">
-            <p>
-                Posted By Tom
-                <span>@TrendMusic</span>
-            </p>
-        </a>
-    </div>
-    <!-- End Item -->
 </div>
 
