--- a/public/blog_masonry_5_col.html
+++ b/public/blog_masonry_5_col.html
@@ -1355,7 +1355,7 @@
 			<a href="blog/ajax/loadMoreBlog.html" class="cbp-l-loadMore-link">
 				<span class="cbp-l-loadMore-defaultText">MORE</span>
 				<span class="cbp-l-loadMore-loadingText"><img src="images/loader.gif" alt="loader" /></span>
-				<span class="cbp-l-loadMore-noMoreLoading">NO MORE WORKS</span>
+				<span class="cbp-l-loadMore-noMoreLoading">NO MORE POSTS</span>
 			</a>
 		</div>
 
